may have fixed the item selectors not showing up in new widget on live server

--- a/src/civicboom/public/styles/widget/layout_gradient.scss
+++ b/src/civicboom/public/styles/widget/layout_gradient.scss
@@ -80,10 +80,10 @@ $title-kerning: 0.08em;
         }
     }
     .item_selected {
-        background:url('/images/widget/item_selected.png') no-repeat;
+        background:url('../common/item_selected.png') no-repeat;
     }
     .item_unselected {
-        background:url('/images/widget/item_unselected.png') no-repeat;
+        background:url('../common/item_unselected.png') no-repeat;
     }
     
     /* -------------------------------------------------------------------------- */
